# bc

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  demo.py  pyproject.toml
artifacts/: smoke_audit.json
data/: memory.json
evals/: __init__.py  benchmark_cases.py  run_evals.py  run_v4_evals.py  v4_cases.py  v6_robustness_assets.py
manuscript/: JOURNAL_AND_EXPERIMENT_PLAN.md  MANUSCRIPT_DRAFT.md  MANUSCRIPT_REVISION_PLAN.md  MANUSCRIPT_V2.md  MANUSCRIPT_V2.tex  MANUSCRIPT_V3.tex  MANUSCRIPT_V4.tex  MANUSCRIPT_V5.tex  MANUSCRIPT_V6.tex  MEMORY_ITERATION_NPJ_COMPARISON_V1.md  NPJ_STYLE_REVISION_TASKS_V1.md  NPJ_WRITING_RULES_V1.md  REFERENCE_STYLE_MEMORY_NATURE_NPJ_SCIENCE_V1.md  SCIENTIFIC_BENCHMARK_REDESIGN_MEMORY_V1.md  SCIENTIFIC_RIGOR_MEMORY_V1.md  case plan.txt  case_breakdown.txt  pilot_eval_repeat5.json  pilot_eval_single.json  rawdata.txt  rawdata_v4.txt  rawdata_v5.txt  rawdata_v6_redesign.txt  review.txt
reflective_agent/: __init__.py  cli.py  cognition_agent.py  config.py  mirror_agent.py  models.py  orchestrator.py  seed_memory.py
reflective_agent/commonsense_knowledge/: __init__.py  base.py  commonsense_entity_resolver.py  commonsense_evidence_builder.py  commonsense_router.py  commonsense_rule_checker.py  layer.py  provenance_ranker.py
reflective_agent/scientific_knowledge/: __init__.py  base.py  constants_provider.py  layer.py  (+5 more)
tests/: test_cli_config.py  test_commonsense_layer.py  test_eval_regression.py  test_mirror_agent.py  test_orchestrator_growth.py  test_scientific_knowledge.py  test_v4_eval_pipeline.py  test_v6_robustness_assets.py
(+354 files in other folders)
